@@ -1,3 +1,15 @@
+2021-06-03  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Make $vm's accessor test functions robust against primitive |this|
+        https://bugs.webkit.org/show_bug.cgi?id=226591
+
+        Reviewed by Saam Barati.
+
+        These functions are testing-purpose, and they are not robust against passing primitive as |this|.
+        This patch makes them robust so that we throw an error instead of crash.
+
+        * tools/JSDollarVM.cpp:
+
 2021-06-03  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r278356.
